--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ main {
 
 .cards {
   /* border: 3px solid black; */
-  margin: 2px;
+  margin: 6px;
   width: 23vw;
   height: fit-content;
   flex-direction: column;
@@ -55,7 +55,7 @@ main {
 
 .background {
   background-image: url('https://cdn.pixabay.com/photo/2017/05/12/08/29/coffee-2306471__480.jpg');
-  height: 22vh;
+  height: 20vh;
   background-position-y: -9vh;
   background-position-x: -3vh;
   display: flex;
@@ -66,6 +66,11 @@ main {
 
 h1 {
   height: 10vh;
+}
+
+p, h3, h4, h5, h6 {
+  height: 0vh;
+  margin-left: 15px;
 }
 
 .allCards-top, .allCards-bottom {
@@ -89,18 +94,24 @@ a {
   text-decoration: none;
 }
 
-.number {
+p.number {
   font-size: 3rem;
   font-weight: bold;
   height: 0vh;
-  margin-top: -10px;
+  margin-top: 0px;
 }
 
 .link {
   background-color: gray;
   width: 20vw;
-  height: 4vh;
+  height: 3vh;
   text-align: center;
+  margin-top: 8px;
+}
+
+div.link {
+  align-items: center;
+  align-self: center;
 }
 
 label {
@@ -115,4 +126,8 @@ label {
 .menu {
   justify-content: space-between;
   width: 12vw;
+}
+
+.distance {
+  margin-left:15px;
 }
